# UntitledAdventureGame

./: CHANGELOG.md  CMakeLists.txt  DOCMAP.md  LICENSE.md  README.md  Untitled Adventure Game.lnk  app.rc  install.md
README/: README.html  index.html  main.js  styles.css
README/changelog/: changelog.js
docs/: CNAME  README.md  index.html  main.js  styles.css
docs/changelog/: changelog.css  changelog.html  changelog.js
include/: Button.h  ChatGPT.h  ConfirmationDialog.h  CustomWindow.h  DialogBox.h  GameEngine.h  GameState.h  GameStateManager.h  InventorySystem.h  InventoryUI.h  LayoutManager.h  MainMenuState.h  PlayingState.h  PlayingStateUI.h  ResourceManager.h  SceneManager.h  ScriptParser.h  SettingsState.h  StartState.h  Types.h
scripts/: create-certificate.ps1  sign-executable.ps1
src/: main.cpp
src/assets/items/: items.json
src/assets/scripts/: intro.json  template.json
src/assetsHighRes/scripts/: introOld.json
src/core/: ChatGPT.cpp  ChatGPTError.cpp  CustomWindow.cpp  GameEngine.cpp  GameStateManager.cpp  InventorySystem.cpp  PlayingState.cpp  ResourceManager.cpp  SceneManager.cpp  ScriptParser.cpp  save_data.json
src/ui/: Button.cpp  ConfirmationDialog.cpp  DialogBox.cpp  InventoryUI.cpp  LayoutManager.cpp  MainMenuState.cpp  PlayingStateUI.cpp  SettingsState.cpp  StartState.cpp
